--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     background: #eee;
 }
 
+
 header{
     width: 100%;
     background-color: #ffe600;
@@ -20,51 +21,32 @@ header{
     max-width: 1024px;
     margin: 0 auto;
     padding: 0px 16px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     align-items: center;
 }
 
-/* input{
-    width: 100%;
-    height: 30px;
-    float: left;
-} */
-
-.input-block {
-    position: relative;
-    
-}
-  label {
-    display:block;
-      
-}
-  input {
-    width: 100%;
-    border-radius: 4px;
-    border: none;
-    height: 40px;
-}
-  input,  button {
-    padding: 10px;
+.flex{
+    display: flex;
 }
 
-  button {
-    position: absolute;   
-    top: 0; 
-    right: 0;
-    height: 40px;
-    background-color: #eee;
-    border: none;
-    border-radius: 0px 4px 4px 0px;
-    padding: 11px;
+.w-auto{
+    width: auto;
+}
+
+.align-items-center{
+    align-items: center;
+}
+
+main{
+    max-width: 1024px;
+    align-items: center;
+    margin: 0 auto;
 }
 
 h2{
    margin: 16px; 
    color: #999;
    font-size: 14px;
-   margin-left: 119px;
    font-weight: lighter;
 }
 
@@ -83,16 +65,4 @@ section img{
     margin: 16px;
     border-radius: 4px;
 
-}
-
-section .info-product h1{
-    margin-top: 16px;
-    margin-bottom: 32px;
-    font-size: 24px;
-    font-weight: 400;
-}
-
-section .end-product p{
-    align-items: center;
-    margin-top: 16px;
 }
